--- a/config.json
+++ b/config.json
@@ -2,5 +2,7 @@
     "modelfile": "wikiart.pth",
     "trainingdir": "../train",
     "testingdir": "../test",
-    "device": "cuda:3"
+    "device": "cuda:3",
+    "epochs": 20,
+    "batch_size": 32
 }
